# InterbotixControlServer

./: .dockerignore  .gitignore  .python-version  Caddyfile  Dockerfile  Dockerfile.full-build  Dockerfile.minimal  Makefile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  kill-all.py  main.py  nixpacks.toml  nohup.out  notes_moving_to_docker.md  pyproject.toml  ros-pckg-install-script.sh  xsarm_rpi4_install.sh
.github/skills/code-review/: SKILL.md
.github/skills/commit-pr-description/: SKILL.md
.github/skills/update-docstrings/: SKILL.md
.github/skills/update-tests/: SKILL.md
.github/workflows/: cd.yaml
install/: local_setup.sh  setup.sh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: package.sh
install/interbotix_common_modules/share/interbotix_common_modules/: package.sh
install/interbotix_common_sim/share/interbotix_common_sim/: package.sh
log/: latest_build
scripts/: cleanup.sh  deploy.sh  interbotix-control.service  open_beer.py  open_beer_state_machine.py  setup-systemd-user.sh  start-commands.sh  start-uvicorn-daemon.sh
src/dependencies/: example_usage.py  robot_manager.py  ros_manager.py  ros_status.py  state_machine_deps.py  test_ros_manager.py
src/routers/: arm.py  ros.py  scripts.py  state_machine.py  task.py
src/state_machine/: abstract_state_machine.py  beer_opener_state_machine.py  open_beer_state_machine.py  safe_shutdown.py  simple_movement_state_machine.py  state_machine_manager.py
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+143 files in other folders)
