[project]
name = "interbotixcontrolserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "fastapi-cli>=0.0.8",
    "fastapi[standard]>=0.116.1",
    "modern-robotics>=1.1.1",
    "numpy>=2.2.6",
    "transforms3d>=0.4.2",
]
